--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,7 @@
 
 												<div class="goto__main-wrap">
 													<div class="goto__main-text">Больше информации<br> о нашей компании<br> и больше выполненных работ смотрите<br> на основном сайте</div>
-													<img src="img/noteboock-new.png" class="img-responsive lazy noteboock" alt="alt">
+													<img src="img/noteboock.png" class="img-responsive lazy noteboock" alt="alt">
 												</div>
 
 												<div class="goto__main-btn--wrap text-center">
