--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-	<title>Атлас студия | расчет стоимости ремонта </title>
+	<title>Империал строй | расчет стоимости ремонта </title>
 	<meta name="description" content="Рассчитайте стоимость ремонта вашей квартиры онлайн с точностью 99% за 1 минуту" >
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
