--- a/index.html
+++ b/index.html
@@ -1584,12 +1584,21 @@
 											<div class="row">
 												<div class="col-lg-10 offset-lg-1">
 													<div id="social_slider" class="social_slider">
-														<a href="img/review/vk-1.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-1.png" class="img-responsive lazy" alt="alt"></span></a>
-														<a href="img/review/vk-2.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-2.png" class="img-responsive lazy" alt="alt"></span></a>
-														<a href="img/review/vk-3.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-3.png" class="img-responsive lazy" alt="alt"></span></a>
-														<a href="img/review/vk-4.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-4.png" class="img-responsive lazy" alt="alt"></span></a>
-														<a href="img/review/vk-5.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-5.png" class="img-responsive lazy" alt="alt"></span></a>
-														<a href="img/review/vk-6.png" class="social_slider-item"><span class="social_slider-img"><img src="img/review/vk-6.png" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/1.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/1.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/2.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/2.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/3.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/3.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/4.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/4.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/5.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/5.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/6.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/6.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/7.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/7.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/8.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/8.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/9.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/9.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/10.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/10.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/11.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/11.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/12.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/12.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/13.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/13.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/14.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/14.jpeg" class="img-responsive lazy" alt="alt"></span></a>
+														<a href="img/review/15.jpeg" class="social_slider-item"><span class="social_slider-img"><img src="img/review/15.jpeg" class="img-responsive lazy" alt="alt"></span></a>
 													</div>
 												</div>
 											</div>												
