added video reviews and catalos

--- a/index.html
+++ b/index.html
@@ -1956,41 +1956,41 @@
 	</div>
 </div>
 <div class="quiz__footer lazy" data-bg="url(img/footer_bg.jpg)">
-	<!-- <div class="container">
+	<div class="container">
 		<div class="row">
 
-			<div class="col-lg-6">
+			<div class="col-lg-6" style="text-align: center;">
 				<div class="tnt_title-wrap">
-					<div class="tnt_title">Мы на ТНТ</div>
-					<div class="tnt_subtitle">в шоу «Битва Дизайнеров» </div>
+					<div class="tnt_title">Наши клиенты</div>
+					<div class="tnt_subtitle">о своём идеальном ремонте</div>
 				</div>
-				<div class="tnt_image"><img src="img/tnt.png" class="img-responsive lazy" alt="TNT"></div>
+				<div class="tnt_image"><img src="img/yout.png" class="img-responsive lazy" alt="youtube"></div>
 			</div>
 
 			<div class="col-lg-6">
 				<div class="tnt_videos">
 
-					<a href="https://www.youtube.com/watch?v=LmhosHjEwlU&t=3s" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/3S49RG0D1pc" class="tnt_video tnt_video-js">
 						<img src="img/tnt_1.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
-					<a href="https://www.youtube.com/watch?v=fIQ7Efm3dY8&t=4s" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/r2NH494Wq94" class="tnt_video tnt_video-js">
 						<img src="img/tnt_2.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
-					<a href="https://www.youtube.com/watch?v=agx6Z9asOZY" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/VtKzX5rMqxI" class="tnt_video tnt_video-js">
 						<img src="img/tnt_3.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
-					<a href="https://www.youtube.com/watch?v=7nIPiz6B31U" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/WxdIqQF05I8" class="tnt_video tnt_video-js">
 						<img src="img/tnt_4.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
-					<a href="https://www.youtube.com/watch?v=afKT87SggXY" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/ty44fL9A3Os" class="tnt_video tnt_video-js">
 						<img src="img/tnt_5.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
-					<a href="https://www.youtube.com/watch?v=DbgWhoYUML0" class="tnt_video tnt_video-js">
+					<a href="https://youtu.be/I3sVSW3euZo" class="tnt_video tnt_video-js">
 						<img src="img/tnt_6.jpg" class="img-responsive lazy" alt="tnt">
 					</a>
 
@@ -1998,7 +1998,7 @@
 			</div>
 
 		</div>
-	</div> -->
+	</div>
 
 	<div class="video">
 	    <div class="video-countainer">
