video prev commited

--- a/index.html
+++ b/index.html
@@ -2000,7 +2000,7 @@
 		</div>
 	</div>
 
-	<div class="video">
+<!-- 	<div class="video">
 	    <div class="video-countainer">
 			<video autoplay="autoplay" controlslist="nodownload" disablepictureinpicture="" id="video" loop="loop" muted="muted" playsinline="" preload="auto" src="video/prev.mp4">
 				<source src="video/prev.mp4" type="video/mp4">
@@ -2012,7 +2012,7 @@
 			<div class="video-close"></div>
 			<div class="video-close-always"></div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="subfooter">
 		<div class="container">
