changed gifts block

--- a/index.html
+++ b/index.html
@@ -1121,9 +1121,9 @@
 													<div class="col-lg-3 col-md-6 col-6">
 														<div class="input_parent form_radio form_radio--card form_radio--img">
 															<label for="question-5-radio-1">
-																<img src="img/gifts/1.jpg" class="img-responsive lazy" alt="Подарок">
-																<input class="question-5-radio" id="question-5-radio-1" name="Подарок" type="radio" value="Дизайн-проект" data-printtext="Дизайн-проект">
-																<span class="form_radio__label-text ">Дизайн-проект</span>
+																<img src="img/gifts/1-1.jpg" class="img-responsive lazy" alt="Подарок">
+																<input class="question-5-radio" id="question-5-radio-1" name="Подарок" type="radio" value="Рассрочка" data-printtext="Рассрочка">
+																<span class="form_radio__label-text gifts_txt">Рассрочка на материалы до 2 месяцев</span>
 															</label>
 														</div>
 													</div>
@@ -1132,16 +1132,16 @@
 															<label for="question-5-radio-2">
 																<img src="img/gifts/2.jpg" class="img-responsive lazy" alt="Подарок">
 																<input class="question-5-radio" id="question-5-radio-2" name="Подарок" type="radio" value="Натяжные потолки" data-printtext="Натяжные потолки">
-																<span class="form_radio__label-text ">Натяжные потолки</span>
+																<span class="form_radio__label-text gifts_txt">Натяжные потолки</span>
 															</label>
 														</div>
 													</div> -->
 													<div class="col-lg-3 col-md-6 col-6">
 														<div class="input_parent form_radio form_radio--card form_radio--img">
 															<label for="question-5-radio-3">
-																<img src="img/gifts/3.jpg" class="img-responsive lazy" alt="Подарок">
-																<input class="question-5-radio" id="question-5-radio-3" name="Подарок" type="radio" value="Клининг" data-printtext="Клининг">
-																<span class="form_radio__label-text">Клининг</span>
+																<img src="img/gifts/3-3.jpg" class="img-responsive lazy" alt="Подарок">
+																<input class="question-5-radio" id="question-5-radio-3" name="Подарок" type="radio" value="Скидка 15%" data-printtext="Скидка 15%">
+																<span class="form_radio__label-text gifts_txt">Скидка 15% на работы</span>
 															</label>
 														</div>
 													</div>
@@ -1150,7 +1150,7 @@
 															<label for="question-5-radio-4">
 																<img src="img/gifts/4.jpg" class="img-responsive lazy" alt="Подарок">
 																<input class="question-5-radio" id="question-5-radio-4" name="Подарок" type="radio" value="персональная скидка от нашей компании" data-printtext="Персональная скидка">
-																<span class="form_radio__label-text">Персональная скидка</span>
+																<span class="form_radio__label-text gifts_txt">Персональная скидка</span>
 															</label>
 														</div>
 													</div> -->
@@ -1218,7 +1218,7 @@
 														<div class="result_phone-text"><b>Посмотрите на видео как выглядит расчет стоимости по результатам теста</b></div>
 														<div class="result_phone-img">
 															<!-- <img src="img/iphone.png" class="img-responsive lazy" alt="phone"> -->
-															<div class="get-user-phone__iphone lazy" data-bg="url(img/iphone.png)" data-was-processed="true" style="background-image: url(&quot;img/iphone.png&quot;);">
+															<div class="get-user-phone__iphone lazy" data-bg="url(img/iphone.png)" data-was-processed="true" style="background: url(&quot;img/iphone.png&quot;) no-repeat;">
 																<div class="video_result-wrap">
 																	<video class="video_result" src="video/result.mp4" playsinline="" loop="loop" muted="muted" preload="auto" autoplay="autoplay">
 																		<source src="video/result.mp4" type="video/mp4">
